--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
-find_package(ICU COMPONENTS uc i18n)
-
 project(uklatn LANGUAGES C)
 include(CTest)
+
+find_package(ICU REQUIRED COMPONENTS uc i18n)
 
 add_library(uklatn c/uklatn.c)
 target_include_directories(uklatn PUBLIC c/include ${ICU_INCLUDE_DIRS})
