--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Test CLI
       run: |
         npm install --global
-        '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
+        sh -c '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
 
 
   build-py:
@@ -64,6 +64,7 @@ jobs:
 
 
   build-swift:
+    if: 0
     strategy:
       matrix:
         BUILD_TYPE: [debug, release]
