--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -12,6 +12,7 @@ env:
 jobs:
 
   build-c:
+    if: 0
     strategy:
       matrix:
         BUILD_TYPE: [Debug, Release]
@@ -49,7 +50,7 @@ jobs:
     - name: Test CLI
       run: |
         npm install --global
-        sh -c '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
+        sh -c '[ "$(npx uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
 
 
   build-py:
