--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -49,8 +49,8 @@ jobs:
 
     - name: Test CLI
       run: |
-        npm install
-        sh -c '[ "$(npx uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
+        npm install git+https://github.com/paiv/uklatn.git#wip
+        sh -c '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
 
 
   build-py:
