--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Test CLI
       run: |
-        npm install git+https://github.com/paiv/uklatn.git#wip
+        npm install --global git+https://github.com/paiv/uklatn.git#wip
         sh -c '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
 
 
