--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -49,15 +49,11 @@ jobs:
 
     - name: Install
       run: |
-        npm install --global git+https://github.com/paiv/uklatn.git#wip
+        npm install --global
 
     - name: Test CLI
       run: |
         sh -c '[ "$(npm exec -- uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
-
-    - name: Test import
-      run: |
-        echo 'const { encode } = require("uklatn"); encode("імпорт");' | node -
 
 
   build-py:
