--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "uklatn",
-  "version": "1.8.10",
+  "version": "1.8.11",
   "description": "Ukrainian Cyrillic transliteration to Latin script",
   "author": "Pavel Ivashkov (https://github.com/paiv)",
   "homepage": "https://github.com/paiv/uklatn",
   "license": "MIT",
+  "keywords": ["ukraine", "translit", "romanization"],
   "funding": [
     {
       "type": "individual",
