--- a/.github/workflows/test-builds.yml
+++ b/.github/workflows/test-builds.yml
@@ -101,3 +101,10 @@ jobs:
     - name: Test
       run: swift test -c ${{matrix.build_type}}
 
+    - name: Test CLI
+      run: |
+        sh -c '[ "$(swift run uklatn -t DSTU_9112_B мрії мої)" = "mriji moji" ]'
+
+    - name: Test CLI pipe
+      run: |
+        sh -c '[ "$(echo мрії мої | swift run uklatn -t DSTU_9112_B -f -)" = "mriji moji" ]'
