--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "uklatn"
 description = "Ukrainian Cyrillic transliteration to Latin script"
-readme = "python/readme.md"
+readme = "readme.md"
 dynamic = ["version"]
 authors = [
     {name = "Pavlo Ivashkov"},
