--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.paiv.uklatn</groupId>
   <artifactId>uklatn</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.12.0</version>
 
   <name>uklatn</name>
   <url>https://github.com/paiv/uklatn</url>
