--- a/.github/workflows/build-csharp.yml
+++ b/.github/workflows/build-csharp.yml
@@ -2,7 +2,9 @@ name: .NET C#
 
 on:
   push:
-    tags: ['*']
+    tags:
+    - '*'
+    - '!go/*'
   pull_request:
     branches: [main]
     paths:
