--- a/.github/workflows/build-js.yml
+++ b/.github/workflows/build-js.yml
@@ -2,7 +2,9 @@ name: JavaScript
 
 on:
   push:
-    tags: ['*']
+    tags:
+    - '*'
+    - '!go/*'
   pull_request:
     branches: [main]
     paths:
