--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -21,5 +21,4 @@ jobs:
       run: composer update --no-progress
 
     - name: Test
-      working-directory: ${{github.workspace}}/php
-      run: phpunit .
+      run: php vendor/bin/phpunit ./php
