--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -8,14 +8,25 @@ on:
     branches: [main]
     paths:
     - 'java/**'
+    - '.github/workflows/build-java.yml'
 
 jobs:
 
   build-java:
+    strategy:
+      matrix:
+        java_version: [11, 21]
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-java@v1
+      with:
+        java-version: ${{matrix.java_version}}
+
+    - name: Version
+      run: mvn --version
 
     - name: Test
       working-directory: ${{github.workspace}}/java
