--- a/.github/workflows/build-c.yml
+++ b/.github/workflows/build-c.yml
@@ -9,9 +9,7 @@ on:
     paths:
     - 'c/**'
     - 'CMakeLists.txt'
-
-env:
-  LIBICU: libicu70
+    - '.github/workflows/build-c.yml'
 
 jobs:
 
@@ -28,7 +26,7 @@ jobs:
     - name: Install ICU
       run: |
         # sudo apt-get update -y
-        sudo apt-get install -y libicu-dev ${{env.LIBICU}}
+        sudo apt-get install -y libicu-dev
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.BUILD_TYPE}}
